# moodle_extract

./: README.md  pyproject.toml
moodle_extract/: main.py
tests/: test_moodle_extract.py
