[tool.poetry]
name = "moodle_extract"
version = "0.1.0"
description = "Extract files from Moodle course backups."
authors = ["sjvrensburg <sjansevanrensburg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
untangle = "^1.1.1"
click = "^8.0.1"
rich = "^10.7.0"
bpython = "^0.21"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
moodle_extract = 'moodle_extract.main:moodle_extract'
